[gd_scene load_steps=7 format=3 uid="uid://bu5y7wqklyy23"]

[ext_resource type="Script" uid="uid://wx4274rnykj5" path="res://entities/customer/customer_skin.gd" id="1_cg8kh"]
[ext_resource type="Texture2D" uid="uid://fs3nhi3nqt5s" path="res://assets/customer_skin.png" id="2_fdj8e"]

[sub_resource type="Animation" id="Animation_o4fli"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pants/PantsSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_cg8kh"]
resource_name = "idle"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pants/PantsSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_pxcvo"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pants/PantsSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(-3, -9), Vector2(-1, -9), Vector2(1, -10), Vector2(-1, -9), Vector2(-3, -9), Vector2(-4, -9), Vector2(-5, -11), Vector2(-4, -9)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RightHand:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(-1, 0), Vector2(-7, -1), Vector2(-1, 0), Vector2(0, 0), Vector2(1, -1), Vector2(2, -4), Vector2(1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nuo3m"]
_data = {
&"RESET": SubResource("Animation_o4fli"),
&"idle": SubResource("Animation_cg8kh"),
&"walk": SubResource("Animation_pxcvo")
}

[node name="CustomerLook" type="Node2D"]
script = ExtResource("1_cg8kh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nuo3m")
}

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.686275)
position = Vector2(1, 1)
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 96

[node name="Head" type="Node2D" parent="."]
position = Vector2(1, -20)
metadata/_edit_group_ = true

[node name="HeadSprite" type="Sprite2D" parent="Head"]
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 32

[node name="HairSprite" type="Sprite2D" parent="Head"]
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 49

[node name="FaceSprite" type="Sprite2D" parent="Head"]
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 16

[node name="RightHand" type="Node2D" parent="."]

[node name="RightHandSprite" type="Sprite2D" parent="RightHand"]
position = Vector2(4, -9)
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 80

[node name="Shirt" type="Node2D" parent="."]
position = Vector2(1, -12)
metadata/_edit_group_ = true

[node name="ShirtSprite" type="Sprite2D" parent="Shirt"]
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 64

[node name="Pants" type="Node2D" parent="."]
position = Vector2(1, -4)
metadata/_edit_group_ = true

[node name="PantsSprite" type="Sprite2D" parent="Pants"]
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16

[node name="LeftHand" type="Node2D" parent="."]
position = Vector2(-3, -9)
metadata/_edit_group_ = true

[node name="LeftHandSprite" type="Sprite2D" parent="LeftHand"]
texture = ExtResource("2_fdj8e")
hframes = 16
vframes = 16
frame = 80
